--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
   align-items: center;
   background-color: var(--clr-2green-800);
   color: var(--clr-2orange-100);
-  margin: 1rem 0;
+  margin: 1.5rem 0;
   padding: 1rem 0;
   width: 100%;
 }
@@ -89,6 +89,89 @@
   padding: 3em 1em;
 }
 
+.main-container-school {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--clr-1blue-800);
+  color: var(--clr-1blue-100);
+  padding: 1em;
+  gap: 0.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.frame {
+  max-width: 360px;
+  max-height: 350px;
+  border-radius: 50em;
+  width: 100%;
+  height: 90%;
+  position: relative;
+}
+
+.frame p {
+  position: absolute;
+  top: 160px;
+  left: 0;
+  background-color: rgba(6, 70, 99, 0.514);
+  font-size: 26px;
+  font-weight: 600;
+  text-transform: small-caps;
+  font-family: var(--h1-h5-font);
+}
+
+.text-link {
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem;
+}
+
+.main-container-exhibitions {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.main-container-exhibitions h2 {
+  width: 100%;
+  background-color: var(--clr-1blue-100);
+  color: #a43e0a;
+}
+
+.main-container-exhibitions-items {
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 0.15rem;
+}
+
+.card-content {
+  background-color: var(--clr-1blue-100);
+  color: #a43e0a;
+  max-width: 45%;
+}
+
+.card-text {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--clr-1blue-100);
+  color: var(--clr-2green-900);
+  max-width: 320px;
+  min-height: 178px;
+  width: 45%;
+  padding: 0.5rem;
+  border-radius: 48%;
+  gap: 0;
+}
+
+.card-text .btn {
+  margin: 0.1rem;
+  width: 105%;
+}
+
 .main-container-get-involved {
   flex-direction: column;
   justify-content: space-between;
@@ -97,16 +180,37 @@
   padding: 0.5rem;
   background-color: var(--clr-2green-100);
   color: var(--clr-2green-800);
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .main-container-get-involved img {
-  height: 25vh;
+  height: 22vh;
   object-fit: cover;
-  width: 90%;
+  width: 80%;
+}
+
+@media screen and (min-width: 500px) {
+  .main-container-news {
+    margin: 3rem 0;
+  }
+
+  .main-container-school,
+  .main-container-exhibitions,
+  .main-container-get-involved {
+    margin-bottom: 2rem;
+  }
+
+  .main-container-get-involved img {
+    width: 70%;
+    height: 25vh;
+  }
 }
 
 @media screen and (min-width: 840px) {
+  .main-container-news {
+    margin: 3rem 0;
+  }
+
   .main-container-news-cards {
     flex-direction: row;
     width: 98%;
@@ -116,12 +220,33 @@
     width: 100%;
   }
 
+  .main-container-school {
+    flex-direction: row;
+    padding: 2em;
+    gap: 1rem;
+    margin-bottom: 3rem;
+  }
+
+  .text-link {
+    padding: 1rem;
+  }
+
+  .main-container-exhibitions {
+    margin-bottom: 3rem;
+  }
+
+  .card-content,
+  .card-text {
+    width: 32%;
+  }
+
   .main-container-get-involved {
     flex-direction: row;
+    margin-bottom: 3rem;
   }
 
   .main-container-get-involved img {
-    width: 100%;
-    height: 40vh;
+    width: 65%;
+    height: 38vh;
   }
 }
